--- a/package.json
+++ b/package.json
@@ -1,25 +1,12 @@
 {
-  "name": "ddd",
+  "name": "@whitelabel/source",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "tsnd src/admin"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@types/express": "^4.17.21",
-    "domain-utilities": "^1.9.1",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.3.3"
-  },
-  "dependencies": {
-    "express": "^4.18.2",
-    "reflect-metadata": "^0.2.1",
-    "sqlite3": "^5.1.7",
-    "typeorm": "^0.3.19",
-    "zod": "^3.22.4"
-  }
+  "license": "ISC"
 }
