--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -12,8 +12,11 @@
   "license": "ISC",
   "devDependencies": {
     "@faker-js/faker": "^8.3.1",
+    "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
     "@types/express": "^4.17.21",
+    "@types/node": "^20.11.2",
     "domain-utilities": "^1.9.1",
+    "prettier": "^3.2.2",
     "prisma": "^5.8.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.3.3",
@@ -24,6 +27,7 @@
     "express": "^4.18.2",
     "reflect-metadata": "^0.2.1",
     "sqlite3": "^5.1.7",
+    "tsyringe": "^4.8.0",
     "typeorm": "^0.3.19",
     "zod": "^3.22.4"
   }
